RESOLVED FIXED28352
Fix coding style issues in yarr/RegexInterpreter.cpp
https://bugs.webkit.org/show_bug.cgi?id=28352
Summary Fix coding style issues in yarr/RegexInterpreter.cpp
Holger Freyther
Reported 2009-08-16 02:15:18 PDT
The naming of class members doesn't match the coding style and there are some lines solely consisting out of whitespace.
Attachments
2009-08-16 Holger Hans Peter Freyther <zecke@selfish.org> (24.30 KB, patch)
2009-08-16 02:27 PDT, Holger Freyther
mrowe: review+
Holger Freyther
Comment 1 2009-08-16 02:27:40 PDT
Created attachment 34924 [details] 2009-08-16 Holger Hans Peter Freyther <zecke@selfish.org> Reviewed by NOBODY (OOPS!). https://bugs.webkit.org/show_bug.cgi?id=28352 Fix coding style violations. Use m_ for C++ class members. Remove trailing whitespace on empty lines. * yarr/RegexInterpreter.cpp: (JSC::Yarr::Interpreter::ParenthesesDisjunctionContext::ParenthesesDisjunctionContext): (JSC::Yarr::Interpreter::tryConsumeCharacter): (JSC::Yarr::Interpreter::tryConsumeBackReference): (JSC::Yarr::Interpreter::parenthesesDoBacktrack): (JSC::Yarr::Interpreter::backtrackParentheses): (JSC::Yarr::ByteCompiler::ByteCompiler): (JSC::Yarr::ByteCompiler::compile): (JSC::Yarr::ByteCompiler::checkInput): (JSC::Yarr::ByteCompiler::assertionBOL): (JSC::Yarr::ByteCompiler::assertionEOL): (JSC::Yarr::ByteCompiler::assertionWordBoundary): (JSC::Yarr::ByteCompiler::atomPatternCharacter): (JSC::Yarr::ByteCompiler::atomCharacterClass): (JSC::Yarr::ByteCompiler::atomBackReference): (JSC::Yarr::ByteCompiler::atomParenthesesSubpatternBegin): (JSC::Yarr::ByteCompiler::atomParentheticalAssertionBegin): (JSC::Yarr::ByteCompiler::popParenthesesStack): (JSC::Yarr::ByteCompiler::closeAlternative): (JSC::Yarr::ByteCompiler::closeBodyAlternative): (JSC::Yarr::ByteCompiler::atomParenthesesEnd): (JSC::Yarr::ByteCompiler::regexBegin): (JSC::Yarr::ByteCompiler::alterantiveBodyDisjunction): (JSC::Yarr::ByteCompiler::alterantiveDisjunction): (JSC::Yarr::ByteCompiler::emitDisjunction): --- 2 files changed, 145 insertions(+), 110 deletions(-)
Mark Rowe (bdash)
Comment 2 2009-08-16 02:43:27 PDT
Comment on attachment 34924 [details] 2009-08-16 Holger Hans Peter Freyther <zecke@selfish.org> r=me
Holger Freyther
Comment 3 2009-08-16 06:15:46 PDT
Landed in r47337.
Note You need to log in before you can comment on or make changes to this bug.